--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.1",
+    "tsyringe": "^4.8.0",
     "typescript": "^5.4.3",
     "winston": "^3.13.0"
   },
