--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "eslint": "^8.57.0",
     "express": "^4.19.2",
+    "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0"
   }
 }
