--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   },
   "homepage": "https://github.com/Luansantosdevpy/copera-test#readme",
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express-validator": "^7.0.1",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.1",
+    "socket.io": "^4.7.5",
     "tsyringe": "^4.8.0",
     "typescript": "^5.4.3",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
