--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "dev": "yarn ts-node-dev --clear --inspect --transpile-only --ignore node_modules -r dotenv/config src/server.ts service:"
+    "dev": "yarn ts-node-dev --clear --inspect --transpile-only --ignore node_modules -r dotenv/config src/server.ts service:",
+    "test": "cross-env NODE_ENV=test jest --passWithNoTests --runInBand",
+    "test:unit": "jest --silent --maxWorkers=2 ./tests/unit/*"
   },
   "repository": {
     "type": "git",
@@ -18,8 +20,11 @@
   },
   "homepage": "https://github.com/Luansantosdevpy/copera-test#readme",
   "dependencies": {
+    "@types/faker": "^5.5.3",
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.2",
     "axios": "^1.6.8",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express-validator": "^7.0.1",
     "mongoose": "^8.2.3",
@@ -27,11 +32,14 @@
     "socket.io": "^4.7.5",
     "tsyringe": "^4.8.0",
     "typescript": "^5.4.3",
+    "uuid": "^9.0.0",
     "winston": "^3.13.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.30",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -39,9 +47,12 @@
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
     "express": "^4.19.2",
+    "faker": "^5.5.3",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0"
   }
 }
